1.15.18
-------

1.15.17
-------
(RB=299453)
Fixed bug where any request with the word restli in it is treated as a documentation request

(RB=299380)
Expose hash ring information through jmx

1.15.16
-------

(RB=298904)
Update D2ClientBuilder to honor d2ServicePath

(RB=295065)
PegasusPlugin: Generate list of input pdsc files for generateDataTemplate task at execution time.

(RB=297096)
Extract client cert from https request and save it in the RequestContext.

(RB=296391)
Support AsyncCallableTasks and documentation requests in the mock http server. Clean up mock http server threadpools. Fix hashCode in ProtocolVersion.

1.15.15
-------
(RB=297875)
Resurrecting InvokeAwares.

(RB=276851)
Checking in support for RestLi filters.
Checking in RestLi filters integration test.

1.15.14
-------
(RB=247966)
Changes to allow 2.0 URI format.
2.0 URI format will be publicly documented shortly.
Related refactoring of key encoding.
Added many tests to cover both 1.0 and 2.0 URI format.

(RB=295979)
add setter for d2ServicePath in D2ClientConfig

1.15.13
-------
(RB=292644)
Support Avro translation OptionalDefaultMode in PegasusPlugin.

(RB=294234)
Fix avro schema translator to not translate default values (that will not be used) when avro override is present.

(RB=295035)
Added a PegasusSchema pdsc.

1.15.12
-------
(RB=293255)
Reapply "add LRU mode and minimum pool size to AsyncPool"

(RB=293315)
Add more async pool metrics

1.15.11
-------
(RB=290169)
PegasusPlugin: Deprecate compatibility level OFF and short-circuit to IGNORE.

(RB=288855)
Changing the action parameter setting method name in new client builders to "<parameter name>Param".

(RB=291596)
Add support for AsyncR2Servlet in RestliServlet, update examples to use Jetty 8 with async enabled.

(RB=290827)
Adding a central place (new module r2-unittest-util) to check in test classes all across r2 and can be used in all r2 tests

1.15.10
-------
(RB=289792)